--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sportsurge: Live Sports Streaming | NFL NBA UFC WWE</title>
+  <title>Sportsurge: Official NFL, NBA, UFC & College Football Streams (V3)</title>
   <meta name="description" content="Stream live sports in HD quality on sportsurge.shop. Enjoy NFL, NBA, Cricket, Soccer, UFC, and more with a user-friendly interface">
   <meta name="keywords" content="live sports streaming, NFL live, NBA live, cricket live, soccer live, UFC live, Sportsurge">
   <meta name="google-site-verification" content="cFc9hc_1CT-us6l6Y6PaxQC5xgv57wL7EtPSsHRngLI" />
@@ -69,7 +69,7 @@
 </header>
 
 <main>
-  <h1 class="main-content-title" id="main-title">Sportsurge: Live Sports Streaming | NFL NBA UFC WWE</h1>
+  <h1 class="main-content-title" id="main-title">Welcome to Sportsurge: The Home of American Sports</h1>
 
   <!-- Search Bar and Schedule Button -->
   <div class="search-and-schedule-container">
@@ -103,64 +103,80 @@
 
   <!-- NEW ARTICLE SECTION with ANIMATIONS -->
   <article class="article-container">
-    <div class="article-intro animate-on-scroll">
-      <p>Are you a passionate sports lover and looking for the best website to watch your favorite sports live? Welcome to <strong>sportsurge.shop</strong>, the premier destination for live sports streaming. With our user-friendly interface and extensive sports coverage, we bring you closer to the action than ever before. Whether it’s cricket, soccer, NFL, NBA, MMA, Tennis, or any other popular sport, <a href="/">Sportsurge</a> offers a seamless experience tailored just for you.</p>
-    </div>
+    <p>Are you tired of expensive cable subscriptions, blackouts, and aggressive pop-up ads? Welcome to Sportsurge, the premier destination for live sports broadcast links.</p>
 
-    <div class="section-divider animate-on-scroll">
-      <h2>Why Choose Sportsurge?</h2>
-    </div>
+    <p>Sportsurge V3 has evolved. We help fans across the USA watch their favorite matches without the hassle. Whether it is Sunday Night Football, the NBA Playoffs, or NCAA College Football, Sportsurge offers a clean, seamless, and high-definition experience tailored just for you.</p>
 
-    <div class="feature-grid">
-      <div class="feature-card animate-on-scroll">
-        <div class="feature-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path d="M384 480c35.3 0 64-28.7 64-64l0-224c0-35.3-28.7-64-64-64L192 128c-35.3 0-64 28.7-64 64l0 224c0 35.3 28.7 64 64 64l192 0zm0-64L192 416l0-224L384 192l0 224zM248.5 252.1c4.6-4.3 11.6-4.1 16 .4l48 48c4.5 4.5 4.5 11.8 0 16.3l-48 48c-4.5 4.5-11.8 4.5-16.3 0s-4.5-11.8 0-16.3L288.7 304 248.5 264.5c-4.4-4.5-4.3-11.6 .2-16.1zM576 64c0-35.3-28.7-64-64-64L64 0C28.7 0 0 28.7 0 64L0 352c0 35.3 28.7 64 64 64l32 0 0 32c0 17.7 14.3 32 32 32l256 0c17.7 0 32-14.3 32-32l0-32 32 0c35.3 0 64-28.7 64-64l0-288zM480 352l-384 0c-8.8 0-16-7.2-16-16L80 80c0-8.8 7.2-16 16-16l384 0c8.8 0 16 7.2 16 16l0 256c0 8.8-7.2 16-16 16z"/></svg></div>
-        <h3>Wide Range of Sports Coverage</h3>
-        <p>From cricket to basketball, soccer to MMA, and everything in between, we cover it all. Our platform provides live streaming for major events like the Super Bowl, Premier League, NBA games, and more. No matter your favorite sport, Sportsurge ensures you never miss a moment of the action.</p>
-      </div>
-      <div class="feature-card animate-on-scroll">
-        <div class="feature-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><path d="M64 64V448H576V64H64zM0 64C0 28.7 28.7 0 64 0H576c35.3 0 64 28.7 64 64V448c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V64zM256 256c0-17.7-14.3-32-32-32s-32 14.3-32 32v64c0 17.7 14.3 32 32 32s32-14.3 32-32V256zM320 192c-17.7 0-32 14.3-32 32v64c0 17.7 14.3 32 32 32s32-14.3 32-32V224c0-17.7-14.3-32-32-32zM448 224c0-17.7-14.3-32-32-32s-32 14.3-32 32v96c0 17.7 14.3 32 32 32s32-14.3 32-32V224z"/></svg></div>
-        <h3>HD-Quality Streams</h3>
-        <p>Enjoy high-definition streams with minimal buffering, regardless of your internet speed. Our advanced technology ensures you get the best possible experience, so you can focus on the game without distractions.</p>
-      </div>
-      <div class="feature-card animate-on-scroll">
-        <div class="feature-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M352 256c0 22.2-1.2 43.6-3.3 64H163.3c-2.2-20.4-3.3-41.8-3.3-64s1.2-43.6 3.3-64H348.7c2.2 20.4 3.3 41.8 3.3 64zM512 256c0 141.4-114.6 256-256 256S0 397.4 0 256S114.6 0 256 0S512 114.6 512 256zM112 256c0 79.5 64.5 144 144 144s144-64.5 144-144s-64.5-144-144-144S112 176.5 112 256z"/></svg></div>
-        <h3>Stream Anywhere, Anytime</h3>
-        <p>Our platform is compatible with all devices, including desktops, laptops, smartphones, and tablets. Whether you’re at home or on the go, Sportsurge ensures you can enjoy live sports streaming wherever you are.</p>
-      </div>
-      <div class="feature-card animate-on-scroll">
-        <div class="feature-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path d="M160 32c-35.3 0-64 28.7-64 64V320c0 35.3 28.7 64 64 64H288V32H160zM288 384H160c-53 0-96-43-96-96V96C64 43 107 0 160 0H288V384zM512 320V96c0-35.3-28.7-64-64-64H416V384h32c35.3 0 64-28.7 64-64zM416 0H320V384H416c53 0 96-43 96-96V96c0-53-43-96-96-96z"/></svg></div>
-        <h3>No Annoying Popup Ads</h3>
-        <p>We do not use any popup ads on our website. We understand our users need and we focus mostly on users benefit. So we do not harras users by showing popup ads. On our website, you can watch the match seamlessly with clean interface.</p>
-      </div>
-    </div>
-    
-    <div class="section-divider animate-on-scroll">
-      <h2>What We Offer</h2>
-    </div>
+    <h2>Why Sportsurge is the #1 Choice in the USA</h2>
+    <p>While other sites are filled with spam, Sportsurge focuses on quality. Here is why we are the top-ranked directory for live sports:</p>
 
-    <div class="offer-section animate-on-scroll">
-      <ul class="styled-checklist">
-        <li><strong>Cricket:</strong> Watch major cricket leagues like the IPL, PSL, BPL, and Big Bash League.</li>
-        <li><strong>Soccer:</strong> Stream matches from the Premier League, La Liga, and other top leagues.</li>
-        <li><strong>NFL &amp; NBA:</strong> Enjoy live streams of NFL games and NBA showdowns with HD-quality streams.</li>
-        <li><strong>MMA &amp; Boxing:</strong> Don’t miss out on UFC fights and high-stakes boxing matches.</li>
-        <li><strong>Tennis &amp; Hockey:</strong> Follow the excitement of Grand Slam tournaments and NHL games.</li>
-      </ul>
-    </div>
-    
-    <div class="article-conclusion animate-on-scroll">
-      <h3>Experience Sportsurge Today</h3>
-      <p>Join the thousands of sports fans who trust Sportsurge for their live sports streaming needs. Whether you’re a die-hard NFL fan, a cricket enthusiast, or a casual viewer, Sportsurge is your ultimate destination for live sports coverage.</p>
-      <p>Start streaming now and enjoy the thrill of live sports like never before. <strong>Sportsurge – where the game never stops.</strong></p>
-    </div>
+    <h3>1. The "No Pop-up" Promise</h3>
+    <p>We understand that nothing ruins a game faster than intrusive ads. Unlike our competitors, we do not use annoying pop-up ads on our main directory. Our interface is clean, user-focused, and designed to get you to the game instantly.</p>
+
+    <h3>2. Comprehensive US Sports Coverage</h3>
+    <p>We don't just cover sports; we dominate the American market.</p>
+    <ul>
+        <li><strong>Sportsurge NFL:</strong> Access reliable links for every regular-season game, the Playoffs, and the Super Bowl.</li>
+        <li><strong>Sportsurge NBA:</strong> From the tip-off to the Finals, catch every dunk and three-pointer.</li>
+        <li><strong>College Football (NCAA):</strong> Follow your Alma Mater. We provide extensive coverage for FBSI, SEC, Big 10, and all major college conferences.</li>
+        <li><strong>UFC & Boxing:</strong> Watch the biggest PPV fights without the $80 price tag.</li>
+    </ul>
+
+    <h3>3. HD Quality & Stability</h3>
+    <p>Enjoy high-definition broadcast links that adapt to your internet speed. Whether you are on 5G or Wi-Fi, our links are ranked by reliability to ensure minimal buffering during critical moments.</p>
+
+    <h2>What We Offer: The Sportsurge Directory</h2>
+
+    <h3>American Football (NFL & NCAA)</h3>
+    <p>The heart of our platform. View official Sportsurge NFL broadcast links. We cover Monday Night Football, Thursday Night Football, and the entire Sunday slate. Don't miss the College Football Playoffs.</p>
+
+    <h3>Basketball (NBA & WNBA)</h3>
+    <p>Follow the action with Sportsurge NBA coverage. We provide real-time links for every team, ensuring you never miss a buzzer-beater.</p>
+
+    <h3>Motorsports (F1 & NASCAR)</h3>
+    <p>From the F1 grid to the NASCAR tracks, we provide high-speed links for high-speed sports.</p>
+
+    <h3>Combat Sports (MMA, UFC, Boxing)</h3>
+    <p>Sportsurge Boxing and MMA links ensure you have a ringside seat for every main event.</p>
+
+    <h3>Soccer (Premier League, MLS, UCL)</h3>
+    <p>While we focus on the US, we love the beautiful game. Stream matches from the Premier League, La Liga, and the Champions League.</p>
+
+    <h3>Global Sports (Tennis, Hockey, Cricket)</h3>
+    <p>Yes, we cover the world too. Find links for NHL Hockey, Grand Slam Tennis, and major Cricket leagues like the IPL and Big Bash.</p>
+
+    <h2>Frequently Asked Questions</h2>
+
+    <h3>Is Sportsurge free?</h3>
+    <p>Yes. Sportsurge is a completely free aggregator. We believe sports should be accessible to everyone without expensive monthly fees.</p>
+
+    <h3>How does Sportsurge work?</h3>
+    <p>Think of us as a search engine for sports. We do not host content. Instead, we find and index the best available broadcast links from around the internet and organize them into an easy-to-read schedule.</p>
+
+    <h3>Can I watch on mobile?</h3>
+    <p>Absolutely. Sportsurge is optimized for all devices, including iPhones, Android smartphones, tablets, and desktops.</p>
+
+    <h2>Start Watching Today</h2>
+    <p>Join the thousands of sports fans who trust Sportsurge V3 for their live streaming needs. Whether you are a die-hard NFL fan or a casual viewer, we are your ultimate destination.</p>
+    <p><strong>Sportsurge – Where the game never stops.</strong></p>
   </article>
 </main>
 
 <!-- Footer -->
 <footer>
   <div class="disclaimer-box">
-    <h3>Disclaimer</h3>
-    <p>We do not host or own any media content; all streams are sourced from third-party sites. We do not take any responsibility for copyright issues. Copyright concerns should be directed to the original host. We have no control over ads in embedded players and receive no revenue from them. <a href="/Disclaimer/">Learn More!</a></p>
+    <h2>DMCA Notice & Directory Policy</h2>
+    <h3>Digital Millennium Copyright Act (DMCA) Compliance</h3>
+    <p>Sportsurge functions strictly as a search engine and information directory.</p>
+
+    <h3>1. Content Hosting</h3>
+    <p>This website does not host, archive, store, or distribute media files or video streams. All content found on this domain is hosted by third-party, non-affiliated providers (such as live TV broadcasters) that are publicly accessible via the internet.</p>
+
+    <h3>2. Third-Party Links</h3>
+    <p>We utilize standard web indexing techniques to aggregate links already available on the public web. The owners and administrators of Sportsurge have no control over the content, copyright compliance, or legality of the streams found on external websites.</p>
+
+    <h3>3. Copyright Claims</h3>
+    <p>We respect intellectual property rights. If you are a copyright owner and believe that a link in our directory infringes upon your rights, please contact the original hosting provider for immediate removal. You may also submit a DMCA request to us, and we will remove the specific reference link from our search index in compliance with US Law.</p>
   </div>
   <ul class="footer-menu">
     <li><a href="/">Home</a></li>
@@ -248,6 +264,7 @@
 
 </body>
 </html>
+
 
 
 
